@@ -3,6 +3,10 @@
 	* Makedefs.in
 	* Makefile.in: check for installation path of sawfish-ksm.desktop via kde4-config
 
+	* lisp/sawfish/wm/ext/fdo-menu.jl: added copyright header
+	                                   make update-sawfish-menu work without restarting sawfish
+					   -- (after intial call on sawfish-startup) [Matthew Love]
+
 2009-09-08  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/util/prompt.jl: squashed the last compiler warnings [Matthew Love]
 
